New-Upload-1755854042013/objects/Profile_Object_Permission__c.object
<CustomObject>
    <fields>
        <fullName>Allow_Create__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allow create permission</description>
        <label>Allow Create</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allow_Delete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allow delete permission</description>
        <label>Allow Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allow_Edit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allow edit permission</description>
        <label>Allow Edit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allow_Read__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allow read permission</description>
        <label>Allow Read</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Modify_All_Records__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Modify all records permission</description>
        <label>Modify All Records</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <description>Name of the object</description>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_Name_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the Profile Admin record (displays Profile Name)</description>
        <label>Profile Name Lookup</label>
        <referenceTo>Profile_Admin__c</referenceTo>
        <relationshipLabel>Object Permissions by Name</relationshipLabel>
        <relationshipName>Object_Permissions_By_Name</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Profile_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the Profile Admin record</description>
        <label>Profile Name</label>
        <referenceTo>Profile_Admin__c</referenceTo>
        <relationshipLabel>Object Permissions</relationshipLabel>
        <relationshipName>Object_Permissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>View_All_Fields__c</fullName>
        <defaultValue>false</defaultValue>
        <description>View all fields permission</description>
        <label>View All Fields</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>View_All_Records__c</fullName>
        <defaultValue>false</defaultValue>
        <description>View all records permission</description>
        <label>View All Records</label>
        <type>Checkbox</type>
    </fields>
    <label>Profile Object Permission</label>
    <nameField>
        <displayFormat>POP-{0000}</displayFormat>
        <label>Object Permission Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Profile Object Permissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>